[package]
name    = "upnp-igdp"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1"
httparse = "1"
log = "0.4"
roxmltree = "0.2"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-timer = "0.2"
tokio-udp = "0.1.3"
unicase = "2"
url = "1"

[dev-dependencies]
env_logger = "0.5"
tokio = "0.1"

